Fixed the bugs with the Back to Home speech bubble. Made the aside align flex-end so when the speech bubble was visible, it wouldn't move the other elements down. Also made the speech bubble only appear when hovering over the arrow restart button. It is no longer triggered when hovering over the Try Again and Play Again restart buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ span:hover {
 .gameboard {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-end;
     padding: 20px;
     margin: 20px auto;
     background-color: #5158BB;
